--- a/vue/src/scss/app.scss
+++ b/vue/src/scss/app.scss
@@ -32,3 +32,12 @@ h2 {
 .sp-transfer-list__table {
   table-layout: auto;
 }
+
+.flex-row {
+  display: flex;
+  flex-direction: row;
+}
+
+.flex-end {
+  justify-content: flex-end;
+}
